2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/comp-editor.c (save_comp): modify and create instead
	of update, simplify mod code

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-day-view.c (e_day_view_finish_long_event_resize): modify
	the object instead of update, simplify the instance handling
	(e_day_view_finish_resize): ditto
	(e_day_view_on_top_canvas_drag_data_received): ditto
	(e_day_view_on_main_canvas_drag_data_received): ditto

2003-09-22  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c (cal_client_get_alarms_in_range): use
	'has-alarms' function in the search expression.

	* pcs/cal-backend-object-sexp.c (func_has_alarms): new SExp function.

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-day-view.c (e_day_view_on_editing_stopped): create the
	object if its not on the server or modify it if it is

	* gui/e-week-view.c (e_week_view_on_editing_stopped): we return if
	there is no text and it *not* on the server

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-week-view.c (e_week_view_on_editing_stopped): create the
	object if its not on the server or modify it if it is

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/gnome-cal.h: remove proto

	* gui/gnome-cal.c: remove gnome_calendar_unrecur_selection

	* gui/e-week-view.h: remove proto

	* gui/e-week-view.c: remove e_week_view_unrecur_appointment

	* gui/e-day-view.h: remove proto

	* gui/e-day-view.c: remove e_day_view_unrecur_appointment

	* gui/e-cal-view.c: remove on_unrecur_appointment (this is handled
	better via recurrence id's now)

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-itip-control.c (update_attendee_status): ifdef out, leave
	temporarily for reference, but otherwise it shouldn't be needed
	(update_item): switch to using receive objects
	(ok_clicked_cb): update item when receiving a reply

	* gui/e-calendar-table.c (selection_received): switch to using
	create object from update_objects
